fmcsadmin
(c) 2017-2018 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.

Version: 0.9.1 (in development)
- Add error messages for the FileMaker error code 10006 and 10908.
- [BUG FIX] Fix logging out process.

Version: 0.9.0 (beta)
Date: December 22, 2017
- Initial release supporting FileMaker Admin API (Trial). Released as a beta version under the Apache License, Version 2.0.